@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: tp.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2006/10/10 10:44:10 $
+ @(#) $RCSfile: tp.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2006/10/12 10:24:50 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/10/10 10:44:10 $ by $Author: brian $
+ Last Modified $Date: 2006/10/12 10:24:50 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: tp.c,v $
+ Revision 0.9.2.12  2006/10/12 10:24:50  brian
+ - removed redundant debug flags, and got itot compiling
+
  Revision 0.9.2.11  2006/10/10 10:44:10  brian
  - updates for release, lots of additions and workup
 
@@ -92,10 +95,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: tp.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2006/10/10 10:44:10 $"
+#ident "@(#) $RCSfile: tp.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2006/10/12 10:24:50 $"
 
 static char const ident[] =
-    "$RCSfile: tp.c,v $ $Name:  $($Revision: 0.9.2.11 $) $Date: 2006/10/10 10:44:10 $";
+    "$RCSfile: tp.c,v $ $Name:  $($Revision: 0.9.2.12 $) $Date: 2006/10/12 10:24:50 $";
 
 /*
  *  This file provides both a module and a multiplexing driver for the ISO/OSI X.224
@@ -147,7 +150,7 @@ typedef unsigned int socklen_t;
 #define TP_DESCRIP	"UNIX SYSTEM V RELEASE 4.2 FAST STREAMS FOR LINUX"
 #define TP_EXTRA	"Part of the OpenSS7 stack for Linux Fast-STREAMS"
 #define TP_COPYRIGHT	"Copyright (c) 1997-2006 OpenSS7 Corporation.  All Rights Reserved."
-#define TP_REVISION	"OpenSS7 $RCSfile: tp.c,v $ $Name:  $ ($Revision: 0.9.2.11 $) $Date: 2006/10/10 10:44:10 $"
+#define TP_REVISION	"OpenSS7 $RCSfile: tp.c,v $ $Name:  $ ($Revision: 0.9.2.12 $) $Date: 2006/10/12 10:24:50 $"
 #define TP_DEVICE	"SVR 4.2 STREAMS TPI OSI Transport Provider Driver"
 #define TP_CONTACT	"Brian Bidulock <bidulock@opens7.org>"
 #define TP_LICENSE	"GPL"
@@ -807,7 +810,7 @@ np_alloc(void)
 	return (np);
 }
 
-//#if defined CONFIG_STREAMS_NOIRQ || defined CONFIG_STREAMS_TEST
+//#if defined CONFIG_STREAMS_NOIRQ || defined _TEST
 #if 1
 
 #define spin_lock_str(__lkp, __flags) \
